# pybind-tutorial

./: .gitignore  CMakeLists.txt  README.md  example.cpp  setup.py
include/: arithmetic.h  image.h
interface/: pybind_test_interface.cpp
src/: arithmetic.cpp  image.cpp
test/: test_add.py  test_image.py
